syntax = "proto3";
package tictactoe.game;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "tictactoe/x/game/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateGame(MsgCreateGame) returns (MsgCreateGameResponse);
  rpc PlayGame(MsgPlayGame) returns (MsgPlayGameResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateGame {
  string creator = 1;
  string inviter = 2;
}

message MsgCreateGameResponse {
}

message MsgPlayGame {
  string creator = 1;
  string gameId = 2;
  string row = 3;
  string col = 4;
}

message MsgPlayGameResponse {
}

// this line is used by starport scaffolding # proto/tx/message
